# ods-deep-rl

./: README.md  pyproject.toml
homeworks/Nabatchikov_practice1/: Nabatchikov_practice1_1.py  Nabatchikov_practice1_2.py  Nabatchikov_practice1_3.py  compare_results.ipynb
homeworks/Nabatchikov_practice2/: Nabatchikov_practice2_1.py  Nabatchikov_practice2_2.py  compare_results.ipynb
homeworks/Nabatchikov_practice3/: Nabatchikov_practice3_1.py  Nabatchikov_practice3_2.py  Nabatchikov_practice3_3.py  compare_results.ipynb
homeworks/Nabatchikov_practice4/: Nabatchikov_practice4_1.py  Nabatchikov_practice4_2.py  Nabatchikov_practice4_3.py  compare_results.ipynb
homeworks/Nabatchikov_practice5/: Nabatchikov_practice5_1.py  Nabatchikov_practice5_2.py  compare_results.ipynb
homeworks/Nabatchikov_practice6/: Nabatchikov_practice6_1.py
practices/: Practice_5.ipynb  practice2_1.ipynb  practice2_2.py  practice3.1.ipynb  practice3.2.ipynb  practice4.ipynb  practice_1.py
