[tool.poetry]
name = "ods-deep-rl"
version = "0.1.0"
description = ""
authors = ["ilyanabatchikov <inabatchikov@dpkapp.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gym = "0.24.0"
numpy = "1.25.0"
black = "^23.9.1"
jupyter = "^1.0.0"
matplotlib = "^3.8.0"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
